--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,40 +6,8 @@
     </div>
   </div>
   <div id="breadcrumb">
-    <a href="#">+ New Post</a>
+    <%= link_to "+ New Post", new_book_post_path(@book, page: params[:page]) %>
   </div>
-  <!--
-  <div id="posts">
-    <div class="wrapper_skinny">
-      <ul class="cf">
-        <li class="cf">
-          <div class="post_thumbnail">
-            <a href="#">
-              <%= image_tag "note_with_coffee.jpg", alt: "notes" %>
-            </a>
-          </div>
-          <div class="post_overview">
-            <h2><a href="#">How to Pull Off 12 Startups in 12 Months </a> </h2>
-            <p class="description">ghghgh호호호호호 </p>
-          </div>
-        </li>
-        <li class="cf">
-          <div class="post_thumbnail">
-            <a href="#">
-              <%= image_tag "note_with_coffee.jpg", alt: "notes" %>
-            </a>
-          </div>
-          <div class="post_overview">
-            <h2><a href="#">How to Pull Off 12 Startups in 12 Months </a> </h2>
-            <p class="description">ghghgh호호호호호 </p>
-          </div>
-        </li>
-
-      </ul>
-    </div>
-  </div>
-
-  -->
 
 <main>
 <!--Main layout-->
@@ -59,25 +27,6 @@
       <% end %>
     </div>
     <div class="col-10 col-lg-8">
-      <!--
-      <div class="row">
-        <div class="col-12">
-          <%= form_tag book_posts_path(@book), method: 'POST', remote: true, class: 'form-group' do %>
-            <div class="row">
-              <div class="col-6" style="padding-right:0">
-                <%= text_field_tag :content, "", class: 'form-control', placeholder: "검색" %>
-              </div>
-                <div class="col-3">
-                <%#= number_field_tag :page, "", class: 'form-control', placeholder: "페이지" %>
-                </div>
-              <div class="col-6">
-                <%= submit_tag "검색", class: 'btn btn-default' %>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      </div>
-      -->
       <div class="row">
         <!--Main column quotes & opinion-->
         <div class="col-12">
