--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -52,23 +52,22 @@ main {
 }
 
 .book-info {
-  padding: {
-    top: 7rem;
-  }
+  padding: 3rem 1rem;
   background-color: #111;
   opacity: 0.8;
+  word-break: keep-all;
 }
 
-.book-size{
-  margin: auto;
-  width: 300px;
-  height: 424px;
+.book-size, div.card-book > .book-size{
+  width: 100%;
+  height: 28vw;
 }
+
 
 .card-book-new {
   border: dashed 2px lightblue;
   text-align: center;
-  padding: 185px 10px;
+  padding: 12.5vw 4.1vw;
 }
 
 .book-margin {
