remove navar-border, resize book-size

--- a/app/views/books/landing.html.erb
+++ b/app/views/books/landing.html.erb
@@ -15,7 +15,7 @@
   <body>
     <div id="background">
       <header>
-        <nav class="navbar navbar-toggleable-md navbar-dark fixed-top scrolling-navbar">
+        <nav class="navbar navbar-toggleable-md navbar-dark fixed-top scrolling-navbar n-border">
           <div class="container">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
