--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -7,24 +7,30 @@
       <div class="card-block">
         <%#= render_with_hashtags(p.content, book.id) %>
         <%= p.content.html_safe %>
-        <hr>
-        <span class="grey-text"><i class="fa fa-user-circle"></i></span>
         &nbsp;
-        <%= link_to post_replies_path(p.id), remote: true do %>
-          <span class="gery-text"><i class="fa fa-comments-o"></i> <%= p.replies.count %></span>
-        <% end %>
-        &nbsp;
-        <%= link_to new_post_reply_path(p.id), class: "grey-text", remote: true do %>
-          <i class="fa fa-plus-square" aria-hidden="true"></i>
-        <% end %>
         <% if p.user_id == current_user.id %>
-          <%= link_to post_path(p), method: "DELETE", class: "delete-post grey-text", data: { confirm: "정말 삭제하겠습니까?" } do %>
+          <%= link_to post_path(p), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
             <i class="fa fa-trash" aria-hidden="true"></i>
           <% end %>
-          <%= link_to edit_post_path(p), class: "edit-post grey-text" do %>
+          <%= link_to edit_post_path(p), class: "edit-post" do %>
              <i class="fa fa-edit" aria-hidden="true"></i>
           <% end %>
         <% end %>
+        <hr>
+        <div class="etc-post text-right">
+          <div class="tooltip">
+            <i class="fa fa-user-circle"></i>
+            <span class="tooltiptext">Tooltip text</span>
+          </div>
+          &nbsp;
+          <%= link_to post_replies_path(p.id), remote: true do %>
+            <i class="fa fa-comments-o"></i> <%= p.replies.count %>
+          <% end %>
+          &nbsp;
+          <%= link_to new_post_reply_path(p.id), remote: true do %>
+            <i class="fa fa-plus-square" aria-hidden="true"></i>
+          <% end %>
+        </div>
       </div>
     </div>
     <!-- reply/new -->
