--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for book, class: "form-group" do |f| %>
-  <%= f.text_field :title, class: "form-control", placeholder: "title" %>
-  <%= f.text_field :writer, class: "form-control", placeholder: "writer" %>
-  <%= f.text_field :publisher, class: "form-control", placeholder: "publisher" %>
-  <%= f.date_field :published_at, class: "form-control" %>
+  <%= f.text_field :title, class: "form-control", placeholder: "title", required: true %>
+  <%= f.text_field :writer, class: "form-control", placeholder: "writer", required: true %>
+  <%= f.text_field :publisher, class: "form-control", placeholder: "publisher", required: true %>
+  <%= f.date_field :published_at, class: "form-control", required: true  %>
   <%= f.text_field :picture, class: "form-control", placeholder: "Book img url" %>
   <br>
   <div class="text-center">
