--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container main">
     <div class="row">
       <div class="col-lg-10 offset-lg-1">
-        <%= @post.content  %>
+        <%= @post.content.html_safe  %>
       </div>
     </div>
   </div>
