--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -27,18 +27,22 @@ div.etc-post {
   }
 }
 
+i.icon-user {
+  color: $light_dark;
+}
+
 /* Tooltip container */
 .tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+  opacity: 1;
 }
 
 /* Tooltip text */
-.tooltip .tooltiptext {
+.tooltip > .tooltiptext {
   visibility: hidden;
   width: 120px;
-  background-color: #555;
+  background-color: $dark;
   color: #fff;
   text-align: center;
   padding: 5px 0;
@@ -57,8 +61,8 @@ div.etc-post {
 }
 
 /* Tooltip arrow */
-.tooltip .tooltiptext::after {
-  content: "";
+.tooltip > .tooltiptext::after {
+  //content: "";
   position: absolute;
   top: 100%;
   left: 50%;
@@ -69,7 +73,7 @@ div.etc-post {
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
+.tooltip:hover > .tooltiptext {
   visibility: visible;
   opacity: 1;
 }
