--- a/app/views/replies/_item.html.erb
+++ b/app/views/replies/_item.html.erb
@@ -1,12 +1,17 @@
-<div class="card card-reply blue lighten-5">
+<div class="card card-reply">
   <div class="card-block">
-    <span class="grey-text"><i class="fa fa-user-circle"></i> &nbsp; <%= r.user.email %></span>
-    <br><br>
-    <%= simple_format(r.content) %>
+    <div class="tooltip">
+      <i class="fa fa-user-circle icon-user"></i>
+      <span class="tooltiptext"><%= r.user.email %></span>
+    </div> &nbsp;
+    <%= r.content.html_safe %> &nbsp;
     <% if r.user_id == current_user.id %>
-      <hr>
-      <%= link_to "Delete", reply_path(r), method: "DELETE", class: "delete-post red-text", data: { confirm: "정말 삭제하겠습니까?" } %>
-      <%= link_to "Edit", edit_reply_path(r), remote: true, class: "edit-post green-text" %>
+      <%= link_to reply_path(r), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
+        <i class="fa fa-trash" aria-hidden="true"></i>
+      <% end %>
+      <%= link_to edit_reply_path(r), remote: true, class: "edit-post" do %>
+        <i class="fa fa-edit" aria-hidden="true"></i>
+      <% end %>
     <% end %>
   </div>
 </div>
