sign out button

--- a/app/views/books/landing.html.erb
+++ b/app/views/books/landing.html.erb
@@ -25,11 +25,17 @@
             <% end %>
             <div class="collapse navbar-collapse text-right" id="navbarNav1">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+                <% if user_signed_in? %>
+                  <li class="nav-item">
+                  <%= link_to "Sign out", destroy_user_session_path, method: "delete", class: "nav-link" %>
+                  </li>
+                <% else %>
+                  <li class="nav-item">
                   <%= link_to "Sign in", new_user_session_path, class: "nav-link" %>
-                </li>
+                  </li>
+                <% end %>
                 <li class="nav-item">
-                  <%= link_to "Explore", books_path, class: "nav-link" %>
+                <%= link_to "Explore", books_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link">About</a>
@@ -54,7 +60,9 @@
       -->
       <div class="wrapper_skinny">
         <h1>노트 : 책에 <b>깊이</b>를 더하다</h1> 
-        <%= link_to "Sign Up", new_user_registration_path, class: "button button_highlight" %>
+        <% if user_signed_in? == false %>
+          <%= link_to "Sign Up", new_user_registration_path, class: "button button_highlight" %>
+        <% end %>
         <%= link_to "Explore", books_path, class: "button button_white" %>
       </div>
     </div><!-- end of div background -->
