--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for [book, post], class: "form-group new-post" do |f| %>
-  <i class="fa fa-book"></i> &nbsp; <%= f.number_field :page, class: "form-control new-post-page", required: true %>
+  <i class="fa fa-book"></i> &nbsp; <%= f.number_field :page, class: "form-control new-post-page", required: true, min: 1 %>
   <%= f.cktext_area :content, class: "form-control", placeholder: "내용을 입력해주세요.", rows: 50, required: true %>
   <%= f.submit "SUBMIT", class: "btn btn-default" %>
 <% end %>
