--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
             <% if user_signed_in? %>
               <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
               <li><a href="#"><i class="fa fa-user-circle" aria-hidden="true"></i></a></li>
+              <li class="nav-item">
+                <%= link_to "Sign out", destroy_user_session_path, method: "delete", class: "nav-link" %>
+              </li>
             <% else %>
               <li><%= link_to "Sign In / Sign Up", new_user_session_path %></li>
             <% end %>
