--- a/app/views/replies/_item.html.erb
+++ b/app/views/replies/_item.html.erb
@@ -6,10 +6,10 @@
     </div> &nbsp;
     <%= r.content.html_safe %> &nbsp;
     <% if r.user_id == current_user.id %>
-      <%= link_to reply_path(r), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
+      <%= link_to reply_path(r), method: "DELETE", class: "delete-reply", data: { confirm: "정말 삭제하겠습니까?" } do %>
         <i class="fa fa-trash" aria-hidden="true"></i>
       <% end %>
-      <%= link_to edit_reply_path(r), remote: true, class: "edit-post" do %>
+      <%= link_to edit_reply_path(r), remote: true, class: "edit-reply" do %>
         <i class="fa fa-edit" aria-hidden="true"></i>
       <% end %>
     <% end %>
