--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for [book, post], class: "form-group new-post" do |f| %>
   <i class="fa fa-book"></i> &nbsp; <%= f.number_field :page, class: "form-control new-post-page", required: true %>
-<%= f.text_area :content, id: 'editor1', class: "form-control", required: true%>
+<%= f.text_area :content, id: 'editor1', class: "form-control"%>
 <%= f.submit "SUBMIT", class: "btn btn-default" %>
 <% end %>
 
