post/new edit 수정

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,14 +3,29 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import 'variables';
 
-form.new_post {
-  i.fa-book {
-    font-size: 25px;
-  }
-  input.new-post-page {
-    display: inline;
-    width: 5rem;
-    text-align: center;
+form.new_post, form.edit_post {
+  div.page-box {
+    width: 100%;
+    height: 15px;
+    color: $light-dark;
+    input.new-post-page {
+      position: relative;
+      float: right;
+      top: -10px;
+      display: inline;
+      color: $light-dark;
+      width: 3.5rem;
+      text-align: right;
+      border: none;
+      padding: {
+        top: 0;
+      }
+    }
+    span {
+      position: relative;
+      float: right;
+      top: -0.2rem;
+    }
   }
 }
 
@@ -18,6 +33,12 @@ form.new_post {
   float: right;
   margin: {
     right: 1rem;
+  }
+}
+
+.btn-box {
+  margin: {
+    top: 3rem;
   }
 }
 
