--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require bootstrap.css
+ *= require mdb.css
  *= reqrire _hover-effects.css
  *= require font-awesome.css
  *= require monokai_sublime.css
