editor.css test

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  *= reqrire _hover-effects.css
  *= require font-awesome.css
  *= require monokai_sublime.css
+ *= require ckeditor/skins/moono-lisa/editor.css
  *= require_tree .
  *= require_self
  */
