--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="page-box">
-  <%= f.number_field :page, class: "form-control new-post-page", required: true %> <span>PAGE</span>
+  <%= f.number_field :page, class: "form-control new-post-page", required: true, min: 1 %> <span>Page</span>
 </div>
 <br>
 <%= f.text_area :content, id: 'editor1', class: "form-control" %>
