--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -34,4 +34,9 @@
   <div id="post_<%= p.id %>">
   </div>
 <% end %>
-<script>hljs.initHighlightingOnLoad();</script>
+<script>
+  $(document).ready(function(){
+     hljs.initHighlighting.called = false;
+     hljs.initHighlighting();
+  });
+</script>
