--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,37 +1,41 @@
 <% posts.each do |p| %>
-  <div class="card">
-    <div class="card-block">
-      <%#= render_with_hashtags(p.content, book.id) %>
-      <%= p.content.html_safe %>
-      <hr>
-      <div class="etc-post">
-        <% if p.user_id == current_user.id %>
-          <%= link_to post_path(p, page: params[:page]), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
-            <i class="fa fa-trash" aria-hidden="true"></i>
+    <div class="card">
+      <div class="card-block">
+        <%#= render_with_hashtags(p.content, book.id) %>
+        <%= p.content.html_safe %>
+        <hr>
+        <div class="etc-post">
+          <% if p.user_id == current_user.id %>
+            <%= link_to post_path(p, page: params[:page]), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
+              <i class="fa fa-trash" aria-hidden="true"></i>
+            <% end %>
+            <%= link_to edit_post_path(p, page: params[:page]), class: "edit-post" do %>
+               <i class="fa fa-edit" aria-hidden="true"></i>
+            <% end %>
           <% end %>
-          <%= link_to edit_post_path(p, page: params[:page]), class: "edit-post" do %>
-             <i class="fa fa-edit" aria-hidden="true"></i>
+          <div class="tooltip user-post">
+            <i class="fa fa-user-circle"></i>
+            <span class="tooltiptext"><%= p.user.email %></span>
+          </div>
+          &nbsp;
+          <%= link_to post_replies_path(p.id), class: "index-reply", remote: true do %>
+            <i class="fa fa-comments-o"></i> <%= p.replies.count %>
           <% end %>
-        <% end %>
-        <div class="tooltip user-post">
-          <i class="fa fa-user-circle"></i>
-          <span class="tooltiptext"><%= p.user.email %></span>
+          &nbsp;
+          <%= link_to new_post_reply_path(p.id), class: "new-reply", remote: true do %>
+            <i class="fa fa-plus-square" aria-hidden="true"></i>
+          <% end %>
         </div>
-        &nbsp;
-        <%= link_to post_replies_path(p.id), class: "index-reply", remote: true do %>
-          <i class="fa fa-comments-o"></i> <%= p.replies.count %>
-        <% end %>
-        &nbsp;
-        <%= link_to new_post_reply_path(p.id), class: "new-reply", remote: true do %>
-          <i class="fa fa-plus-square" aria-hidden="true"></i>
-        <% end %>
       </div>
     </div>
-  </div>
-  <!-- reply/new -->
-  <div id="post_<%= p.id %>_new">
-  </div>
-  <div id="post_<%= p.id %>">
-  </div>
+    <!-- reply/new -->
+    <div id="post_<%= p.id %>_new">
+    </div>
+    <div id="post_<%= p.id %>">
+    </div>
 <% end %>
-<script>hljs.initHighlightingOnLoad();</script>
+<script>
+$(document).ready(function() {
+  hljs.initHighlightingOnLoad();
+});
+</script>
