--- a/app/assets/stylesheets/replies.scss
+++ b/app/assets/stylesheets/replies.scss
@@ -10,10 +10,16 @@
   }
 }
 
+.content-reply {
+  margin: {
+    right: 1rem;
+  }
+}
+
 .index-reply, .new-reply {
   float: right;
   margin: {
-    right: 1rem;
+    right: 0.8rem;
   }
 }
 
