--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,6 +4,6 @@
 <br>
 <%= f.text_area :content, id: 'editor1', class: "form-control" %>
 <div class="btn-box text-center">
-  <%= f.submit "SUBMIT", class: "btn btn-default" %>
-  <%= link_to "BACK", book_path(book, page: page), class: "btn btn-primary" %>
+  <%= f.submit "SUBMIT", class: "btn-americano" %>
+  <%= link_to "BACK", book_path(book, page: page), class: "btn-americano" %>
 </div>
