--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -16,7 +16,7 @@
 CKEDITOR.disableAutoInline = true;
 $(document).ready(function(){
   var editor = CKEDITOR.inline( 'editor1' /*,{removePlugins: 'stylescombo'}*/);
-  editor.setData("<h1>Put your title here</h1><p>Content</p>");
+  editor.setData("<h4>Put your title here</h4><br><p>Content</p>");
   editor.config.startupFocus = true;
 });
 </script>
