--- a/app/views/replies/_index.html.erb
+++ b/app/views/replies/_index.html.erb
@@ -1,5 +1,5 @@
 <% replies.each do |r| %>
   <div id="reply_<%= r.id %>">
-    <%= render partial: 'item', locals: { r: r } %>
+    <%= render partial: 'replies/item', locals: { r: r } %>
   </div>
 <% end %>
