--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,43 @@
     <div class="row">
       <div class="col-lg-10 offset-lg-1">
         <%= @post.content.html_safe  %>
+        <br><hr>
+        <div class="etc-post">
+          <% if @post.user_id == current_user.id %>
+            <%= link_to post_path(@post, page: params[:page]), method: "DELETE", class: "delete-post", data: { confirm: "정말 삭제하겠습니까?" } do %>
+              <i class="fa fa-trash" aria-hidden="true"></i>
+            <% end %>
+            <%= link_to edit_post_path(@post, page: params[:page]), class: "edit-post" do %>
+               <i class="fa fa-edit" aria-hidden="true"></i>
+            <% end %>
+          <% end %>
+          <%= link_to post_replies_path(@post.id), class: "index-reply", remote: true do %>
+            <i class="fa fa-comments-o"></i> <%= @post.replies.count %>
+          <% end %>
+          &nbsp;
+          <%= link_to new_post_reply_path(@post.id), class: "new-reply", remote: true do %>
+            <i class="fa fa-plus-square" aria-hidden="true"></i>
+          <% end %>
+          &nbsp;
+          <div class="tooltip user-post">
+            <i class="fa fa-user-circle"></i>
+            <span class="tooltiptext"><%= @post.user.email %></span>
+          </div>
+        </div>
+        <!-- reply/new -->
+        <br>
+        <div id="post_<%= @post.id %>_new">
+        </div>
+        <br>
+        <div id="post_<%= @post.id %>">
+        </div>
       </div>
     </div>
   </div>
 </main>
+<script>
+  $(document).ready(function(){
+  hljs.initHighlighting.called = false;
+  hljs.initHighlighting();
+  });
+</script>
