--- a/app/views/replies/_item.html.erb
+++ b/app/views/replies/_item.html.erb
@@ -1,12 +1,12 @@
-<div class="card card-reply">
+<div class="card">
   <div class="card-block">
+    <span class="content-reply"><%= r.content.html_safe %> &nbsp;</span>
     <div class="tooltip">
       <i class="fa fa-user-circle icon-user"></i>
       <span class="tooltiptext"><%= r.user.email %></span>
     </div> &nbsp;
-    <%= r.content.html_safe %> &nbsp;
     <% if r.user_id == current_user.id %>
-      <%= link_to reply_path(r), method: "DELETE", class: "delete-reply", data: { confirm: "정말 삭제하겠습니까?" } do %>
+      <%= link_to reply_path(r), method: "DELETE", remote: true, class: "delete-reply", data: { confirm: "정말 삭제하겠습니까?" } do %>
         <i class="fa fa-trash" aria-hidden="true"></i>
       <% end %>
       <%= link_to edit_reply_path(r), remote: true, class: "edit-reply" do %>
