--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
               <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
               <li><a href="#"><i class="fa fa-user-circle" aria-hidden="true"></i></a></li>
               <li>
+                  <%= link_to "My Note", my_notes_path %>
+              </li>
+              <li>
                 <%= link_to "Sign out", destroy_user_session_path, method: "delete"  %>
               </li>
             <% else %>
