--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -77,8 +77,11 @@ main {
 }
 
 .pages {
+  margin: {
+    top: 1rem;
+  }
   padding: {
-    right: 0
+    right: 0;
   }
   border: {
   }
@@ -131,7 +134,7 @@ footer.page-footer {
 
 //books/show page 관련
 main {
-  padding-top: 3rem;
+  padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
